2006-09-23  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* include/struct.h: Changed type of field 'preview' in
	st_filedialog to GtkWidget*.

	* src/s_toplevel.c (s_toplevel_new): Added missing init of
	rotated_inside.

2006-09-22 Carlos Nieves Onega <cnieves@iespana.es>

	* README, configure.ac, include/globals.h, src/f_image.c,
	  src/o_arc_basic.c, src/o_box_basic.c, src/o_bus_basic.c,
	  src/o_circle_basic.c, src/o_image.c, src/o_line_basic.c,
	  src/o_net_basic.c, src/o_pin_basic.c, src/s_color.c,
	  src/s_cue.c: 
	  Use gd 2.0.x library instead of libgdgeda.
	  libgdgeda is not used anymore. Work based on a patch by
	  Wojciech Kazubski (patch #1479983).
	
2006-09-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Updated program version to 20060906.

	* share/Makefile.am: Changed the install directory of prolog.ps
	to the DATA directory and not the RC directory since that is
	where system-gafrc is looking for it.  This bug was found when
	--with-rcdir was used.  This fix is related to Bug#1552338.

	* include/defines.h: Added CUSTOM_VERSION string #define.  
	Normally this #define defines an empty string, but for those 
	people who need to spin a custom version of gEDA/gaf (of course,
	following the licensing/distribution requirements of the GPL), they
	can set this to a string which is appended to printfs/output/dialog 
	boxes where VERSION is used.

2006-09-04 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/s_toplevel.c: Added code to s_toplevel_delete 
	to check for and remove a GSource before it is deleted.  Patch by
	Patrick Bernaud.  Thanks!

	* src/s_page.c: Added s_page_autosave_init to setup the autosave
	callback (instead of doing it in i_vars_set) which was also
	be set in the preview toplevel (having the callback there is
	undesirable).

	* src/s_toplevel.c: Added the init of auto_save_timeout in 
	s_toplevel_new().  Pointed out by PeterC and this make valgrind
	happy again.

2006-09-02  Patrick Bernaud  <b-patrick@wanadoo.fr>
