@@ -36,7 +36,6 @@ typedef struct st_object OBJECT;
 typedef struct st_page PAGE;
 typedef struct st_toplevel TOPLEVEL;
 typedef struct st_color COLOR;
-typedef struct st_filedialog FILEDIALOG;
 typedef struct st_selection SELECTION;
 typedef struct st_undo UNDO;
 typedef struct st_tile TILE;
@@ -406,44 +405,6 @@ struct st_page {
   PAGE *next;
 };
 
-struct st_filedialog {
-  GtkWidget *xfwindow;		
-
-  int type;
-  int filesel_type;
-
-  GtkWidget *filter;
-  int filter_type;
-
-  GtkWidget *search_entry;
-  GtkWidget *search_label;
-  int last_search_lib;
-  int last_search;		
-
-  GtkWidget *filename_entry;
-
-  GtkWidget *dir_list;
-  GtkWidget *file_list;
-
-  char *directory;
-  char *filename;
-
-  /* need to make this dynamic TODO ?? */
-  char *directory_entries[MAX_DIRS];
-  char *file_entries[MAX_FILES];
-
-  GtkWidget *preview;
-  GtkWidget *preview_checkbox;
-  int preview_control;
-
-  GtkWidget *component_pulldown;
-
-  /* this points to the owner of this filedialog structure */
-  /* should NEVER be freed */
-  TOPLEVEL *toplevel;
-
-}; 
-
 struct st_toplevel {
 
   int wid;			/* Window id, always unique */
@@ -610,11 +571,6 @@ struct st_toplevel {
   char *current_clib;
   char current_basename[256]; 	
 
-
-  FILEDIALOG fileselect[2];
-  /* see define.h for what */
-  /* each of the different */
-  /* members of this array are */
 
   GtkWidget *iwindow;			/* image write dialog box */
   GtkWidget *ifilename_entry; 
